--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@ h1{
     background-color: rgba(209, 4, 250, 0.295);
     border-radius: 10px;
 }
-
+.show{
+  display: none;
+}
 
 
 .lds-ellipsis {
